# llato

./: .gitignore  README.md  pyproject.toml
llato/data/: cleansing.ipynb  cleansing_jt.py  scrap_grammes.py  scrap_raw.py
llato/data/csv/: adverbs.csv  conjunctions.csv  halfparticiples.csv  interjections.csv  numerals.csv  particles.csv  prepositions.csv  pronoun.csv  properties.md  subparticles.csv
llato/models/: train.ipynb  train_jt.py
